# mskasal.com

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
assets/: explode.d.ts  explode.js  explode_bg.wasm  explode_bg.wasm.d.ts  led_matrix.d.ts  led_matrix.js  led_matrix_bg.wasm  led_matrix_bg.wasm.d.ts  ocr.d.ts  ocr.js  ocr_bg.wasm  ocr_bg.wasm.d.ts  package.json  pong.d.ts  pong.js  pong_bg.wasm  pong_bg.wasm.d.ts  styles.css
explode/: Cargo.toml
explode/src/: lib.rs
led_matrix/: Cargo.toml
led_matrix/src/: lib.rs
ocr/: Cargo.toml
ocr/src/: lib.rs
pong/: Cargo.toml
pong/src/: lib.rs
src/: main.rs
templates/: 404.html  dyn_item.html  dyn_item_idle.html  dyn_matrix.html  experiments.html  grid.html  head.html  index.html  led_matrix.html  matrix.html  nav.html  ocr.html  pong.html
