workspace = { members = ["explode"] }
[package]
name = "mskasal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json", "markdown", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros", "http2"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
explode = { path = "./explode" }
web-sys = { version = "0.3.67", features = ["Navigator", "HtmlVideoElement", "MediaStream", "MediaDevices", "MediaTrackConstraints", "MediaStreamConstraints"] }
