[package]
name = "led_matrix"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "Performance", "KeyboardEvent", "MouseEvent", "Event"] }


